--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="col-md-6 col-md-offset-3">
           <h2>About Us</h2>
           <hr>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
+          <p class="lead">test</p>
         </div>
       </div>
     </div>
